Added changes proposed by team members

--- a/figures/sigmoid-ends.tex
+++ b/figures/sigmoid-ends.tex
@@ -17,8 +17,8 @@
         ]
             \addplot[color=red, domain=-5:5]{1 / (1 + exp(-x))};
             \addlegendentry{$1/(1+exp(-t))$}
-            \addplot[color=blue, domain=5:8]{1};
-            \addplot[color=blue, domain=-8:-5]{0};
+            \addplot[very thick, domain=5:8]{1};
+            \addplot[very thick, domain=-8:-5]{0};
             \addlegendentry{$0, 1$}
         \end{axis}
     \end{tikzpicture}
