--- a/management/tools.tex
+++ b/management/tools.tex
@@ -26,4 +26,4 @@ Git also keeps a full local copy of each repository on each developer's computer
 \subsection{Report Write-up}
 Git proved successful at managing changes to the project's source code, and aiding in the administration overhead required when multiple people are working on the code simultaneously. Because of this, the group were keen to make use of Git for the report write-up too. This meant binary formats, such as those used by Microsoft Word and other WYSIWYG editors, were unacceptable; instead a text-based report write-up would be required, to allow Git to effectively hold it under source control.
 
-\LaTeX is such a system; it uses one or more text files in which report content can be placed, and marked-up with the defined \TeX markup. This can be compiled into a professionally typeset PDF documents. The team found this solution very helpful as it allowed each member to focus solely on content creation rather than formatting, in the knowledge that the final report would be in a consistent and appropriate format. \LaTeX can also be used to create complex charts, tables and flow diagrams, not only reducing the time spent on such activities, but also ensuring a common `style' for all material produced by the group.
+\LaTeX \  is such a system; it uses one or more text files in which report content can be placed, and marked-up with the defined \TeX \  markup. This can be compiled into a professionally typeset PDF documents. The team found this solution very helpful as it allowed each member to focus solely on content creation rather than formatting, in the knowledge that the final report would be in a consistent and appropriate format. \LaTeX \   can also be used to create complex charts, tables and flow diagrams, not only reducing the time spent on such activities, but also ensuring a common `style' for all material produced by the group.
